rbac-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-test
spec:
  serviceAccountName: pod-reader-sa
  containers:
  - name: rbac-test
    image: bitnami/kubectl
    command: ["sleep", "3600"]
